Use FindThreads cmake module to locate pthreads

--- a/messagefacility/Utilities/CMakeLists.txt
+++ b/messagefacility/Utilities/CMakeLists.txt
@@ -25,6 +25,8 @@ set(messagefacility_utilities_SOURCES
   )
 
 
+# Find threads library
+include(FindThreads)
 # - Shared
 add_library(MF_Utilities SHARED
   ${messagefacility_utilities_SOURCES}
@@ -38,7 +40,7 @@ target_include_directories(MF_Utilities
     $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}>
     $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
   )
-target_link_libraries(MF_Utilities cetlib::cetlib -lpthread)
+target_link_libraries(MF_Utilities cetlib::cetlib Threads::Threads)
 
 # - Static
 add_library(MF_Utilities-static STATIC
@@ -53,7 +55,7 @@ target_include_directories(MF_Utilities-static
     $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}>
     $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
   )
-target_link_libraries(MF_Utilities-static cetlib::cetlib -lpthread) 
+target_link_libraries(MF_Utilities-static cetlib::cetlib Threads::Threads) 
 
 # - Install
 install(TARGETS MF_Utilities MF_Utilities-static
