Refactor MessageLogger and MessageService to break intertwined dependencies.

--- a/messagefacility/CMakeLists.txt
+++ b/messagefacility/CMakeLists.txt
@@ -1,5 +1,6 @@
 include(CetMake)
 
+add_subdirectory(Auxiliaries)
 add_subdirectory(MessageLogger)
 add_subdirectory(MessageService)
 add_subdirectory(Utilities)
