--- a/messagefacility/plugins/CMakeLists.txt
+++ b/messagefacility/plugins/CMakeLists.txt
@@ -3,14 +3,14 @@ include(BasicPlugin)
 cet_make_library(
   LIBRARY_NAME MF_FileFormat
   SOURCE formatFilename.cc
-  LIBRARIES MF_MessageService ${FHICLCPP}
+  LIBRARIES MF_MessageService fhiclcpp
   )
 
 # ordinary destination plugins
-basic_plugin(cout   mfPlugin MF_MessageService)
-basic_plugin(cerr   mfPlugin MF_MessageService)
-basic_plugin(file   mfPlugin MF_FileFormat)
-basic_plugin(syslog mfPlugin MF_MessageService)
+basic_plugin(cout mfPlugin MF_MessageService)
+basic_plugin(cerr mfPlugin MF_MessageService)
+basic_plugin(file mfPlugin MF_FileFormat)
+basic_plugin(syslog mfPlugin MF_MessageLogger)
 
 # statistics destination plugins
 basic_plugin(cout mfStatsPlugin MF_MessageService)
