Remove some unused facilities.
The following ELdestination functions have been removed since they are not used:
- clearSummary
- zero
- switchChannel

--- a/messagefacility/test/MessageService/CMakeLists.txt
+++ b/messagefacility/test/MessageService/CMakeLists.txt
@@ -5,14 +5,15 @@
 # ======================================================================
 
 # Get all FHiCL files
-FILE (GLOB testConfigFiles fhicl-files/*.fcl )
+file(GLOB testConfigFiles fhicl-files/*.fcl )
+list(REMOVE_ITEM testConfigFiles ${CMAKE_CURRENT_SOURCE_DIR}/fhicl-files/statistics_duplicateDest.fcl)
 
-foreach ( filename ${testConfigFiles} )
+foreach (filename ${testConfigFiles})
 
   # trim directory prefixes and .fcl suffix
-  string( REGEX REPLACE "(.*/fhicl-files/)(.*)(.fcl)" "\\2" testname ${filename} )
+  string(REGEX REPLACE "(.*/fhicl-files/)(.*)(.fcl)" "\\2" testname ${filename})
 
-  cet_test( messagefacility_${testname}_t HANDBUILT
+  cet_test(messagefacility_${testname}_t HANDBUILT
     TEST_EXEC ELdestinationTester
     TEST_ARGS -c ${filename}
     DATAFILES
@@ -20,3 +21,11 @@ foreach ( filename ${testConfigFiles} )
     )
 
 endforeach()
+
+cet_test(messagefacility_statistics_duplicateDest_t HANDBUILT
+  TEST_EXEC ELdestinationTester
+  TEST_ARGS -c fhicl-files/statistics_duplicateDest.fcl
+  DATAFILES
+  fhicl-files/statistics_duplicateDest.fcl
+  TEST_PROPERTIES WILL_FAIL TRUE
+  )
