Implement "ALT_CMAKE" build
To ease transition to non-UPS/cetbuildtools system, factorize
"modern-cmake" work into branch that focuses on build only. Will
be branch off of this to deal with C++ portability issues.

Following work by @gartung, use if/else/endif block in CMake
scripts to separate build "style" based on ALT_CMAKE cmake boolean.
When FALSE, build defaults to UPS/cetbuildtools and CMake scripts
otherwise unchanged. When TRUE, include altCMakeLists.cmake script
that implement the new portable CMake/cetbuildtools2 build, ignoring
the UPS/cetbuildtools scripting.

In tests, no ALT_CMAKE structure is used as yet as scripts are
compatible. However, some tests will not pass due to expectation
of PATH being set.

Import additional Doxygen/CMake package config files needed to
support builds of docs and client support.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,8 @@
+# - When user supplies "-DALT_CMAKE" use the non-CET/UPS system
+if(ALT_CMAKE)
+  include(altCMakeLists.cmake)
+else()
+
 #
 #  CMakeLists.txt
 #  -------------------------------------------------------------------
@@ -50,3 +55,5 @@ add_subdirectory(ups)
 # This step enables building the package tarball
 # packaging utility
 include(UseCPack)
+
+endif() # ALT_CMAKE
