--- a/messagefacility/CMakeLists.txt
+++ b/messagefacility/CMakeLists.txt
@@ -1,3 +1,8 @@
+# - When user supplies "-DALT_CMAKE" use the non-CET/UPS system
+if(ALT_CMAKE)
+  include(altCMakeLists.cmake)
+else()
+
 include(CetMake)
 
 add_subdirectory(MessageLogger)
@@ -5,3 +10,5 @@ add_subdirectory(MessageService)
 add_subdirectory(Utilities)
 # Testing
 add_subdirectory(test)
+
+endif() # ALT_CMAKE
