--- a/messagefacilityConfig.cmake.in
+++ b/messagefacilityConfig.cmake.in
@@ -18,9 +18,10 @@ set_and_check(@PROJECT_NAME@_INCLUDEDIR "@PACKAGE_CMAKE_INSTALL_INCLUDEDIR@")
 find_package(cetlib @cetlib_VERSION@ EXACT REQUIRED)
 find_package(fhiclcpp @fhiclcpp_VERSION@ EXACT REQUIRED)
 find_package(Boost @Boost_MAJOR_VERSION@.@Boost_MINOR_VERSION@ EXACT REQUIRED)
-
 # NB: This assumes presence of FindSQLite module
 find_package(SQLite @SQLite_VERSION@ EXACT REQUIRED)
+find_package(Threads REQUIRED)
+
 
 # - Include our targets
 include("${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME@Targets.cmake")
