Set messagefacility_INCLUDE_DIR(S) in messagefacilityConfig
Upstream clients like Canvas may require include dirs for dictionary
generation, so set standard CMake FindXXX style variables for
messagefacility.

Long term, should look at using genexps for this to allow propagtion
of dependent include paths.

--- a/messagefacilityConfig.cmake.in
+++ b/messagefacilityConfig.cmake.in
@@ -7,11 +7,15 @@ set(@PROJECT_NAME@_VERSION "@PROJECT_VERSION@")
 # - CMakePackageConfigHelpers Startup...
 @PACKAGE_INIT@
 
-# Don't *strictly* need include dir as linking to fhiclcpp::fhiclcpp
+# Don't *strictly* need include dir(s) as linking to cetlib::cetlib
 # target will propagate all needed requirements. However, it's
 # useful if we're using header-only parts and don't want to
 # have a binary linkage.
-set_and_check(@PROJECT_NAME@_INCLUDEDIR "@PACKAGE_CMAKE_INSTALL_INCLUDEDIR@")
+# NB: Could also/Should be derived from INTERFACE_INCLUDE_DIRS
+# as this will add paths from deps (e.g Boost). However,
+# as that would involve a genexp its propagation needs thought.
+set_and_check(@PROJECT_NAME@_INCLUDE_DIR "@PACKAGE_CMAKE_INSTALL_INCLUDEDIR@")
+set(@PROJECT_NAME@_INCLUDE_DIRS "${@PROJECT_NAME@_INCLUDE_DIR}")
 
 # - When needed, refind needed targets here
 # - Assert EXACT version as this is default behaviour of UPS setups.
