Fix bug #13464: segmentation violation for SingleThread initialization.
Rookie mistake: accidentally used make_unique<T>() instead of unique_ptr<T>().

--- a/messagefacility/test/Integration/CMakeLists.txt
+++ b/messagefacility/test/Integration/CMakeLists.txt
@@ -4,8 +4,12 @@
 #
 # ======================================================================
 
-CONFIGURE_FILE (
-  ${CMAKE_CURRENT_SOURCE_DIR}/MessageFacilityTest.cfg
-  ${CMAKE_CURRENT_BINARY_DIR}/MessageFacility.cfg
-  COPYONLY
-  )
+cet_test(SingleThreadMSPresence_init_t
+  LIBRARIES
+  MF_MessageLogger
+  fhiclcpp)
+
+cet_test(MultiThreadMSPresence_init_t
+  LIBRARIES
+  MF_MessageLogger
+  fhiclcpp)
