--- a/messagefacilityConfig.cmake.in
+++ b/messagefacilityConfig.cmake.in
@@ -21,7 +21,9 @@ set(@PROJECT_NAME@_INCLUDE_DIRS "${@PROJECT_NAME@_INCLUDE_DIR}")
 # - Assert EXACT version as this is default behaviour of UPS setups.
 find_package(cetlib @cetlib_VERSION@ EXACT REQUIRED)
 find_package(fhiclcpp @fhiclcpp_VERSION@ EXACT REQUIRED)
-find_package(Boost @Boost_MAJOR_VERSION@.@Boost_MINOR_VERSION@ EXACT REQUIRED)
+find_package(Boost @Boost_MAJOR_VERSION@.@Boost_MINOR_VERSION@ EXACT REQUIRED
+  thread program_options filesystem
+  )
 # NB: This assumes presence of FindSQLite module
 find_package(SQLite @SQLite_VERSION@ EXACT REQUIRED)
 find_package(Threads REQUIRED)
