--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,9 +36,11 @@ cet_report_compiler_flags()
 
 # these are minimum required versions, not the actual product versions
 # find_ups_product defines variables for external libraries and executables
-find_ups_product (cetbuildtools v4_14_01)
-find_ups_product( fhiclcpp v2_17_00  )
-find_ups_product( sqlite v3_08_05_00 )
+find_ups_product(cetbuildtools v4_14_01)
+find_ups_product(cetlib_except v1_00_00)
+find_ups_product(cetlib v2_00_00)
+find_ups_product(fhiclcpp v2_17_00)
+find_ups_product(sqlite v3_08_05_00 )
 find_ups_boost(v1_50_0)
 
 # The environment has been established, now generate the Makefiles.
