--- a/messagefacility/test/Utilities/CMakeLists.txt
+++ b/messagefacility/test/Utilities/CMakeLists.txt
@@ -4,11 +4,9 @@
 #
 # ======================================================================
 
-link_libraries( MF_Utilities )
-
 cet_test_env(CLEAR "FHICL_FILE_PATH=${CMAKE_CURRENT_SOURCE_DIR}")
 
-cet_test( Exception_t )
-cet_test( ExceptionDerived_t )
-cet_test( Simple_t )
+cet_test(Exception_t LIBRARIES MF_Utilities cetlib_except)
+cet_test(ExceptionDerived_t LIBRARIES MF_Utilities cetlib_except)
+cet_test(Simple_t LIBRARIES MF_Utilities cetlib_except)
 
