Implement automatic suppression, per CMSSW: https://savannah.web.cern.ch/savannah/CMS_Software/cmssw/task/11808.html

--- a/messagefacility/MessageService/CMakeLists.txt
+++ b/messagefacility/MessageService/CMakeLists.txt
@@ -8,6 +8,7 @@ cet_make_library(
   ELrecv.cc
   ELstatistics.cc
   ErrorLog.cc
+  MessageDrop.cc
   MessageLoggerQ.cc
   MsgContext.cc
   MsgFormatSettings.cc
