Phase one of, "Upgrade Message Drop per CMSSW 9dfd0937ee."
Upgrade context-info-setting facilities with cache-ing and more
flexibility.

--- a/messagefacility/test/Integration/CMakeLists.txt
+++ b/messagefacility/test/Integration/CMakeLists.txt
@@ -8,3 +8,10 @@ cet_test(SingleThreadMSPresence_init_t
   LIBRARIES
   MF_MessageLogger
   fhiclcpp)
+
+cet_make_exec(mfexample
+  LIBRARIES
+  MF_MessageLogger
+  MF_MessageService
+  fhiclcpp
+  )
