Collapse redundant hierarchy: SingleThreadMSPresence -> Presence.

--- a/messagefacility/test/Integration/CMakeLists.txt
+++ b/messagefacility/test/Integration/CMakeLists.txt
@@ -4,7 +4,7 @@
 #
 # ======================================================================
 
-cet_test(SingleThreadMSPresence_init_t
+cet_test(Presence_init_t
   LIBRARIES
   MF_MessageLogger
   fhiclcpp)
