--- a/messagefacility/test/Utilities/CMakeLists.txt
+++ b/messagefacility/test/Utilities/CMakeLists.txt
@@ -1,3 +1,7 @@
+if(ALT_CMAKE)
+  include(altCMakeLists.cmake)
+else()
+
 # ======================================================================
 #
 # Testing script
@@ -10,3 +14,4 @@ cet_test(Exception_t LIBRARIES MF_Utilities cetlib_except)
 cet_test(ExceptionDerived_t LIBRARIES MF_Utilities cetlib_except)
 cet_test(Simple_t LIBRARIES MF_Utilities cetlib_except)
 
+endif() # ALT_CMAKE
