Prune library dependencies.

--- a/messagefacility/MessageLogger/CMakeLists.txt
+++ b/messagefacility/MessageLogger/CMakeLists.txt
@@ -2,6 +2,7 @@ cet_make_exec(ELdestinationTester
   SOURCE ELdestinationTester.cc
   LIBRARIES
   MF_MessageLogger
+  ${Boost_SYSTEM_LIBRARY}
   ${Boost_FILESYSTEM_LIBRARY}
   ${Boost_PROGRAM_OPTIONS_LIBRARY}
   )
