Provide a new ELdestination plugin which allows for stream capture.

--- a/messagefacility/plugins/CMakeLists.txt
+++ b/messagefacility/plugins/CMakeLists.txt
@@ -12,6 +12,7 @@ basic_plugin(cerr mfPlugin MF_MessageLogger)
 basic_plugin(file mfPlugin MF_FileFormat)
 basic_plugin(syslog mfPlugin MF_MessageLogger)
 basic_plugin(sqlite mfPlugin MF_MessageLogger ${SQLITE3})
+basic_plugin(stringstream mfPlugin MF_MessageLogger)
 
 # statistics destination plugins
 basic_plugin(cout mfStatsPlugin MF_MessageLogger)
