Fix and regression test for issue #17457.

--- a/messagefacility/test/Integration/CMakeLists.txt
+++ b/messagefacility/test/Integration/CMakeLists.txt
@@ -3,6 +3,7 @@
 # Testing script
 #
 # ======================================================================
+include(BasicPlugin)
 
 cet_test(Presence_init_t
   LIBRARIES
@@ -14,3 +15,19 @@ cet_make_exec(mfexample
   MF_MessageLogger
   fhiclcpp
   )
+
+basic_plugin(Issue17457TestDestination mfPlugin
+  MF_MessageLogger fhiclcpp ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY}
+  )
+
+foreach (N 01 02) # 03 04 05)
+  set(test_stem Issue17457_${N})
+  cet_test(${test_stem}_t HANDBUILT
+    TEST_EXEC ELdestinationTester
+    TEST_ARGS -c ${test_stem}.fcl
+    DATAFILES fcl/${test_stem}.fcl
+    OUTPUT_FILTERS DEFAULT ${CMAKE_CURRENT_SOURCE_DIR}/Issue17457-filter
+    REF ${CMAKE_CURRENT_SOURCE_DIR}/${test_stem}-ref.out
+    ${CMAKE_CURRENT_SOURCE_DIR}/${test_stem}-ref.err
+    )
+endforeach()
