--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,9 @@ find_ups_product(sqlite v3_08_05_00 )
 find_ups_boost(v1_50_0)
 find_ups_product(tbb)
 
+# SQLite
+cet_find_library(SQLITE3 NAMES sqlite3_ups PATHS ENV SQLITE_LIB NO_DEFAULT_PATH)
+
 # The environment has been established, now generate the Makefiles.
 
 add_subdirectory(messagefacility)
