--- a/messagefacility/CMakeLists.txt
+++ b/messagefacility/CMakeLists.txt
@@ -1,16 +1,5 @@
 include(CetMake)
 
-#MessageService/ELadministrator.cc
-#MessageLogger/Presence.cc
-#MessageLogger/MessageLoggerImpl.cc
-#MessageLogger/MessageLoggerScribe.cc
-#MessageLogger/MessageSender.cc
-#MessageService/MessageLoggerQ.cc
-#MessageService/MsgFormatSettings.cc
-#MessageService/MsgStatistics.cc
-#MessageLogger/MFGlobals.cc
-#MessageLogger/MFPerThread.cc
-
 cet_make_library(
   LIBRARY_NAME
     MF_MessageLogger
@@ -20,13 +9,16 @@ cet_make_library(
     MessageService/ELdestination.cc
     MessageService/ELostreamOutput.cc
     MessageService/ELstatistics.cc
+    Utilities/ELextendedID.cc
+    Utilities/ELseverityLevel.cc
+    Utilities/ErrorObj.cc
+    Utilities/exception.cc
   LIBRARIES
-    MF_Utilities
+    cetlib
     cetlib_except
     fhiclcpp
     hep_concurrency
-    ${TBB}
-)
+    ${TBB})
 
 add_subdirectory(MessageLogger)
 add_subdirectory(MessageService)
