Basic implementation of self-location for plugins
Import implementation of "binreloc" C library code that allows an
executable or library to determine its filesystem location at
runtime. For libraries, like MessageFacility, that implement a
plugin mechanism and supply 1-N builtin plugins this can allow the
library to self-locate its builtin plugins without requiring the user
to set env vars. The environment is then used by upstream packages
to add paths to additional plugins.

Generate binreloc header in order to mangle function symbols. Even though
it is an implementation details of MF_MessageLogger, this prevents
potential clashes with other programs/libraries that may also use binreloc.
Add code to build of library, and update MessageLogger's anonymous namespace's
getPluginPath function so that when called:

1. binreloc's initialization function is run, with the derived runtime
   path of libMF_MessageLogger returned.
2. This path, if non-empty is appended to any plugin path set by the
   MF_PLUGIN_PATH or dynamic loader path from the environment.
3. If binreloc was not able to derive a runtime path, it will be
   empty, with fallback to the system dynamic loader path from the
   environment.

This gives full backward compatibility and does not override any
existing environment settings.

Binreloc code taken from:

- https://github.com/drbenmorgan/packaging/tree/dbm-relocatable-notes/RelocatableSoftware/HSFReloc/programs/binreloc

License is Boost, so compatible with FNAL's license

--- a/messagefacility/CMakeLists.txt
+++ b/messagefacility/CMakeLists.txt
@@ -1,3 +1,10 @@
+# Generate mf_binreloc private interface
+# Just mangles symbols which we need for libs in case several linked libs
+# use their own binreloc. It is private, so will not be installed
+string(RANDOM LENGTH 16 MANGLE_BINRELOC)
+set(MANGLE_BINRELOC "mf_reloc_binreloc${MANGLE_BINRELOC}")
+configure_file(mf_binreloc.h.in mf_binreloc.h @ONLY)
+
 include(CetMake)
 
 cet_make_library(
@@ -13,12 +20,16 @@ cet_make_library(
     Utilities/ELseverityLevel.cc
     Utilities/ErrorObj.cc
     Utilities/exception.cc
+    mf_binreloc.c
   LIBRARIES
     cetlib
     cetlib_except
     fhiclcpp
     hep_concurrency
     ${TBB})
+
+# Enable binreloc via private compiler definition
+target_compile_definitions(MF_MessageLogger PRIVATE ENABLE_BINRELOC)
 
 add_subdirectory(MessageLogger)
 add_subdirectory(MessageService)
