--- a/cmakeConfig/messagefacility-fragment.cmake.in
+++ b/cmakeConfig/messagefacility-fragment.cmake.in
@@ -1,3 +1,3 @@
-cetlib_except
-cetlib
-fhiclcpp
+find_package(cetlib_except REQUIRED)
+find_package(cetlib REQUIRED)
+find_package(fhiclcpp REQUIRED)
