--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,7 +70,7 @@ find_ups_product(cetlib v2_00_00)
 find_ups_product(fhiclcpp v2_17_00)
 find_ups_product(sqlite v3_08_05_00 )
 find_ups_product(hep_concurrency)
-find_ups_boost(v1_50_0)
+find_ups_boost(BOOST_TARGETS v1_50_0)
 
 # SQLite
 cet_find_library(SQLITE3 NAMES sqlite3_ups PATHS ENV SQLITE_LIB NO_DEFAULT_PATH)
